src/component/commitments/index.css
/* 
.slides{
  display: grid;
  grid-template-columns: 55% 45%!important;
}

 */



@media(min-width:768px){
 


.swiper-button-next:hover,
.swiper-button-prev:hover {
  background-color: gray !important; /* Dark background on hover */
}

.swiper-button-next,.swiper-button-prev{
  color: white!important;
  margin-inline:-10px;
}
/* Commitments container styling */
.commitments-container {
  background-color: #002C30;
  height: 80vh;
  display: flex;
  align-items: center;
}

/* Subcontainer for commitments */
.commitments-subcontainer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  padding: 0;
  position: relative;
}

.commitments-subcontainer .swiper-slide-active{
  padding-inline: 30px;
 
}

/* Slides container styling */
.slides {
  /* height: 500px !important; */
  background-color: transparent;
  display: grid;
  grid-template-columns: 55% 45%!important;
  align-items: center;
  padding: 20px;
  gap: 20px;
 
}

/* Text content inside commitments subcontainer */
.commitments-subcontainer .text-content {
 overflow: hidden;

  padding-right: 20px;
  color: white;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: flex-start;
  
 

}

.text-content h3 {
  font-size: 40px;
  font-weight: 700;
  text-wrap: pretty;
 
  
}

.text-content p {
  font-size: 1.2rem;
}

/* Image content inside commitments subcontainer */
.commitments-subcontainer .image-content {
  
  border-radius: 8px;
  position: relative;
  overflow: hidden; /* Ensure the overlay doesn't go outside the container */
  border: 2px solid white;
  height: 400px;
}

.commitments-subcontainer .image-content img{
  width: 100%;
  height: 100%;
}

}

@media (max-width:767px) {
  .commitments-subcontainer .swiper{
    margin-block:0px !important;
}

  .swiper-button-next,.swiper-button-prev{
    color: white!important;
    margin: 0px!important;
  }

  .commitments-container {
    background-color: #002C30;
    height: 53vh;
    
  }
  /* Subcontainer for commitments */
.commitments-subcontainer {
  display: flex;
  
  justify-content: center;
  align-items:start;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  padding: 0;
  position: relative;
}


  
.commitments-subcontainer .slides {
  display: grid;
  grid-template-columns: 1fr; 
  justify-items: center; 
  align-items: end; 
  height: 70vh !important;
  background-color: transparent;
  row-gap: 25px;
  
}

.commitments-subcontainer .text-content {

 
  width: 100%;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  
 
 
}

/* Image content inside commitments subcontainer */
.commitments-subcontainer .image-content {
  width: 100%;
  height: 40%;
  border-radius: 8px;
  position: relative;
  overflow: hidden; /* Ensure the overlay doesn't go outside the container */
  order: 2;
}

.commitments-subcontainer .text-content h3 {
  font-size: 22px;
  font-weight: 700;
  margin-bottom: 10px;
  text-align: center;
 
}

.commitments-subcontainer .text-content p {
  font-size: 16px;
  text-align: center;
}

.commitments-subcontainer .image-content img{
  width: 100%;
  height: 100%;
  
}
.commitments-subcontainer .slides {
  height: 52vh!important;
  background-color: transparent;
  display: flex;
  flex-direction: column;
 justify-content: center;
  align-items: center;

 
 
}

  
}

